--- a/scss/pages/home/_services.scss
+++ b/scss/pages/home/_services.scss
@@ -1,6 +1,9 @@
 .services{
-    color: $color-primary;
     margin: 50px 0em;
+    
+    text-align: center;
+    color: $color-primary;
+
     
     &__header{
         display: inline-block;
