--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,5 +13,8 @@
 @import "pages/home/hero";
 @import "pages/home/services";
 @import "pages/home/whyUs";
+@import "pages/home/weAre";
+@import "pages/home/difference";
+@import "pages/home/world";
 @import "pages/home/projects";
 @import "pages/home/contact";
