--- a/scss/pages/home/_contact.scss
+++ b/scss/pages/home/_contact.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   
-  max-width: 1200;
+  max-width: 1200px;
   width: 80vw;
   margin: 2em auto;
   padding: 1.5em;
@@ -41,7 +41,7 @@
         justify-content: center;
         
         width: 100%;
-
+        
         .explain{
             max-width: 650px;
             order:0;
