--- a/scss/pages/home/_projects.scss
+++ b/scss/pages/home/_projects.scss
@@ -1,31 +1,9 @@
 .projects {
-  &__title {
-    display: inline-block;
+  
+  text-align: center;
+  color: $color-primary;
 
-    padding-bottom: 10px;
-    border-bottom: 5px dashed $color-secondary;
-    margin-bottom: 3em;
-
-    letter-spacing: 5px;
-    color: $color-secondary;
-    line-height: 20rem;
-
-    & > h1 {
-      font-size: $fs-section-title;
-      margin-bottom: 0.2em;
-    }
-
-    & > h4 {
-      font-size: $fs-section-subtitle;
-    }
-
-    & > h4,
-    & > h1 {
-      padding: 10px 5vw;
-    }
-  }
-
-  &__info {
+    &__info {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -50,7 +28,6 @@
     padding: 20px;
 
     font-family: $coolveticaRegular;
-    font-size: $fs-normal;
     text-align: justify;
     letter-spacing: 0.1em;
     color: white;
@@ -64,16 +41,6 @@
 
     &__codice > img {
       max-height: 300px;
-    }
-
-    &__btn {
-      background-color: $color-alt;
-      border: 3px solid $color-secondary;
-      margin-top: 1em;
-      padding: 0.5em 2em;
-      border-radius: 1em;
-      letter-spacing: 0.1em;
-      line-height: 0.5em;
     }
   }
 
@@ -89,7 +56,7 @@
 @media only screen and (min-width: 1200px) {
   .projects {
     &__info {
-      padding: 0 15px;
+      padding:3rem;
     }
     &__explain {
       text-align: right;
@@ -99,11 +66,6 @@
         justify-content: flex-end;
         position: relative;
         right: -6em;
-      }
-
-      &__btn {
-        position: relative;
-        right: 0;
       }
     }
 
