--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -8,6 +8,10 @@
     top: -4rem;
 }
 
+.Home{
+    margin: 5rem 0;
+}
+
 .WeAre{
     display: flex;
     flex-wrap: nowrap;
@@ -17,3 +21,21 @@
 img{
     max-width: 100%;
 }
+
+@media (min-width: 576px) {
+    .Home{
+        margin: 0;
+    }
+}
+/*
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+*/
